--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@ __pycache__/
 .idea/
 venv/
 
+mandle.bmp
+palindrome_env/
+pipstuff/
+python/PycharmProjects/palindrome/build/
+python/PycharmProjects/recaman/
+python/PycharmProjects/writing_files/
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
